--- a/css/regs.css
+++ b/css/regs.css
@@ -1,15 +1,16 @@
 *{
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 
 }
+
 body{
-    background-image: url("../images/regs.jpg");
-    
-    
-    /* background-size: cover;
-    background-position: center; */
-    /* margin-top: 0px; */
+    width: 90%;
+    background-image: url("..images/regs.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center; 
+    height: 95vh; 
     
 }
 .main{
